# live_290

./: README.md  pyproject.toml
pt-br/src/currency_i18n/locale/pt_BR/LC_MESSAGES/: messages.po
src/currency_i18n/: app.py  cli.py
src/currency_i18n/locale/pt-br/pt_BR/LC_MESSAGES/: messages.po
src/currency_i18n/locale/pt_BR/LC_MESSAGES/: messages.po
